[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pavlov"
version = "0.2.0"
description = "High-performance SIMD-optimized RL environments in Rust"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "goshea" }]
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "rl", "simd", "gymnasium", "environments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["gymnasium>=1.0", "pytest>=8.0"]

[project.urls]
Repository = "https://github.com/goshea/pavlov"

[tool.maturin]
manifest-path = "crates/pavlov-python/Cargo.toml"
python-source = "python"
features = ["pyo3/extension-module", "simd"]
