[package]
name = "operant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits and vectorization for Operant RL library"
readme = "../../README.md"

[dependencies]
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
