[package]
name = "operant-envs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SIMD-optimized RL environment implementations for Operant"
readme = "../../README.md"

[features]
default = ["simd"]
simd = []          # Enable SIMD optimizations (requires nightly)
parallel = ["rayon"]  # Enable multi-threaded parallel execution

[dependencies]
operant-core = { version = "0.3", path = "../operant-core" }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
