[package]
name = "pavlov-envs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Environment implementations for Pavlov RL library"

[features]
default = ["simd"]
simd = []          # Enable SIMD optimizations (requires nightly)

[dependencies]
pavlov-core = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
