[package]
name = "pavlov-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for Pavlov RL library"

[lib]
name = "pavlov"
crate-type = ["cdylib"]

[features]
default = ["simd"]
simd = ["pavlov-envs/simd"]  # Pass through to pavlov-envs

[dependencies]
pavlov-core = { workspace = true }
pavlov-envs = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
